compliance/manifests/02-rhacs-operator.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: rhacs-operator
  labels:
    openshift.io/cluster-monitoring: "true"
